--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,16 +1,12 @@
 doctrine:
     dbal:
-        driver: pdo_mysql
-        host: '%database_host%'
-        port: '%database_port%'
-        dbname: '%database_name%'
-        user: '%database_user%'
-        password: '%database_password%'
+        driver: sqlsrv
+        host: 'mysql-server-azure.database.windows.net'
+        port: '1433'
+        dbname: 'mysql'
+        user: 'adumea'
+        password: '76UZ5KUT6BMLC5O5$'
         charset: UTF8
-        # add this parameter
-        unix_socket: '%database_socket%'
-
-        server_version: '8.0'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
