--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,11 +1,15 @@
 doctrine:
     dbal:
-        driver: pdo_mysql
+        driver: pdo_sqlsrv
         host: 'mysql-server-azure.database.windows.net'
         port: '1433'
         dbname: 'mysql'
         user: 'adumea'
         password: '76UZ5KUT6BMLC5O5$'
+        charset: utf8mb4
+        default_table_options:
+            charset: utf8mb4
+            collate: utf8mb4_unicode_ci
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
