--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -6,6 +6,10 @@ doctrine:
         dbname: 'mysql'
         user: 'adumea'
         password: '76UZ5KUT6BMLC5O5$'
+        charset: UTF-8
+        default_table_options:
+            charset: UTF-8
+            collate: utf8mb4_unicode_ci
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
